<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/spacer_std"
    android:gravity="center"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data_btn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_std"
        android:gravity="center"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_status" />

        <TextView
            android:id="@+id/wifi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_state_disconnected"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer_std"
        android:orientation="horizontal"
        android:showDividers="middle">

        <TextView
            android:id="@+id/wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_status" />

        <TextView
            android:id="@+id/location_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_state_unavailable"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>

</LinearLayout>
